# donnie-assistive-robot-sw

./: .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  README.md  compileAll.sh  install-cross-rpi.sh  install-qemu-rpi.sh  install-rpi.sh  install.sh  tage
Antlr/: READ ME  logo.g  (+5 more)
client/: CMakeLists.txt  Compiler.cpp  Compiler.h  DonnieClient.cpp  DonnieClient.h  Historic.cpp  Logo  Logo.cpp  Makefile  Makefile~  README.md  installDependencies.sh  logoParser.h  quadrado.txt  quadrado.txt~  testSquare.txt  teste.txt~  utils.cpp  utils.h
client/Antlr/: README.md  logoLexer.c
client/ParserOLD/: logo.tokens  logoLexer.c  logoLexer.h  logoParser.c
client/alerts/: CMakeLists.txt  alerts.cc  alerts.h  compile.sh
client/floor_desc/: CMakeLists.txt  floor_desc.cc  floor_desc.h
client/godonnie/: CMakeLists.txt  Compiler.cpp  Compiler.h  DonnieClient.cpp  DonnieClient.h  DonnieMemory.cpp  DonnieMemory.h  Exception.cpp  Exception.h  GoDonnie.cpp  GoDonnie.g  GoDonnie_en_US.g  GoDonnie_old.g  GoDonnie_pt_BR.g  Historic.cpp  Historic.h  Makefile  README.md  lexerExtra.h  rgb-en.txt  rgb-pt-br.txt
client/godonnie/test/: odom_square.gd  square.gd  square_backward.gd  square_repeat.gd  test.gd  test_angular_error.gd  test_if.gd  test_if2.gd  test_if_chainned.gd
client/ranger2vib/: CMakeLists.txt  compile.sh  donnie_sim.cfg  ranger2vib.cc  ranger2vib.cpp  ranger2vib.h
client/test/: CMakeLists.txt  Makefile  donnie.cfg  donnie_sim.cfg  test-rangers.cc  test_rangers.cc
client/vib_belt/: CMakeLists.txt  client-donnie.cc  compile.sh  vib_belt.cc  vib_belt.cpp  vib_belt.h
docs/: CMakeLists.txt  Makefile  Makefile-latex  conf.py  index.rst
docs/doxygen/: Makefile  doxy.conf  doxygen.dox
docs/manual/: CMakeLists.txt
docs/manual/hardware_manual/: 3d.tex  Makefile  Tutorial-Configurando_imagem_Raspbian_na_Raspberry.docx  elet.tex  main.tex  prog.tex  test.tex
docs/manual/software_manual/: Makefile  main.tex  player.tex  ros.tex
docs/manual/software_manual/eng/: godonnie.tex  intro.tex
docs/manual/software_manual/pt-br/: tutorial_pacotes_deb.docx
docs/manual/user_manual/: Makefile  env.tex  godonnie.tex  intro.tex  main.tex  setup.tex
docs/papers/: Makefile
docs/reports/2016/: Makefile  append.tex  conclusion.tex  discuss.tex  felipe-extras.tex  hardware.tex  intro.tex  main.bib  main.tex  related.tex  software.tex  usage.tex
docs/source/arduino/: index.rst
docs/source/building/: index.rst
docs/source/contributors/: index.rst
docs/source/getting_started/: about.rst  build.rst  index.rst  install.rst
docs/source/godonnie/: index.rst
docs/source/player/: index.rst
docs/source/rpi/: donnie.rst  index.rst  os-install.rst  setup-os.rst  testing.rst
docs/source/rpi/peripheral/: imu.rst  index.rst  raspicam.rst
docs/source/rpi/video/: index.rst  video-streaming-gstreamer.rst  video-streaming-mjpgstreamer.rst  video-streaming-vlc.rst
docs/source/stage/: index.rst
docs/wiki/: BASICS.md  mkdocs.yml
driver/: CMakeLists.txt
driver/GenericBlobfinder/: GenericBlobfinderV1.cc  GenericBlobfinder_debug.cc  compile.sh  server_GenericBlobfinder.cfg
driver/GenericBlobfinder/client/: main  main.cc
driver/GenericBlobfinder/client/blooob/: Blobfindertest  Blobfindertest.cpp  Makefile
driver/Raspicam_driver/: CMakeLists.txt~  OLDCMakeLists.txt  Raspicam_driver.cc.save  Raspicam_driverV1.cc  Raspicam_driverV2.cc  Raspicam_driverV3.cc
driver/Raspicam_driver/client/: main
driver/Raspicam_driver/sem release/: massif.out.11153  massif.out.14320  massif.out.3550
driver/alerts/: BKPCMakeLists-tentativa-compilar-cfugue.txt  CMakeLists.txt  alerts.cc  server_alerts.cfg
driver/donnie/: CMakeLists.txt  README.md  compile.sh  donnie.cc  donnie.h  motors.h  protocol.cc  server_donnie.cfg
driver/donnie/client-manual_control/: CMakeLists.txt  client-donnie.cc  client_donnie  client_donnie.cc  compile.sh
driver/donnie/old/: server_donnie.cfg
driver/driver-tts/: server_gtts.cfg
driver/driver-tts/client-test/: client-test.cc
driver/floorplan_description/: CMakeLists.txt  compile.sh  floorplan_description.cc  server.cfg
driver/genericblobfinder/: CMakeLists.txt  GenericBlobfinder.cc  GenericBlobfinder.cfg  compile.sh  server_GenericBlobfinder.cfg
driver/genericblobfinder/client/: Blobfindertest.cpp  CMakeLists.txt  Makefile
driver/gtts/: CMakeLists.txt  compile.sh  googletts.cc  gtts.cc  gtts.cfg  server_gtts.cfg  server_test.cfg
driver/gtts/bass24-lib/: bass.h  makefile.in~
driver/gtts/client-test/: CMakeLists.txt  Makefile  client-test  client-test.cc  compile.sh  gtts-test.cc  main  main.cc
driver/ranger2vib/: CMakeLists.txt  ranger2vib.cc  server.cfg
driver/raspicamdriver/: CMakeLists.txt  Raspicam_driver.cc  Raspicam_driver.cfg  compile.sh
driver/raspicamdriver/client/: CMakeLists.txt  Makefile  main.cc
driver/soxplayer/: CMakeLists.txt  compile.sh  server_sound.cfg  soxplayer.cc  soxplayer.cfg  soxplayer.h
driver/soxplayer/client-test/: CMakeLists.txt  client-test  client-test.cc  compile.sh  soxplayer-test.cc
driver/vib-belt/: CMakeLists.txt  server_vib-belt.cfg  vib-belt.cc
driver/vib-belt/client/: CMakeLists.txt  client-test.cc
driver/vib_belt/: CMakeLists.txt  server.cfg  vib_belt.cc
driver/visual_odometry/: CMakeLists.txt  odometria_visual.cpp  visualodometry.cc  visualodometry.cfg
driver/visual_odometry/ReadFrames/: CMakeLists.txt  ReadFrames.cc  ReadFrames.cfg
driver/visual_odometry/camera_calibration/: Makefile  camera_calibration_tutorial.txt
driver/visual_odometry/client/: main.cc
install/: CMakeLists.txt  resetArduino.py  setup-rpi.sh  setup-rpi.sh.in  setup.deb.sh  setup.sh  setup.sh.in  softshutdown.py  speechIP.py
install/cross/: install-cross-rpi.sh  rpi-pkg-config  rpi.cmake
install/cross/hello/: CMakeLists.txt  HelloWorld.cpp
resources/loc/: CMakeLists.txt  README.md
resources/loc/en_US/LC_MESSAGES/: Compiler.mo  DonnieClient.mo  DonnieMemory.mo  Historic.mo  alerts.mo
resources/loc/pot/: Compiler.pot  DonnieClient.pot  DonnieMemory.pot  Exception.pot  GoDonnie.pot  Historic.pot
(+126 files in other folders)
