CMAKE_MINIMUM_REQUIRED (VERSION 2.8 FATAL_ERROR)
SET (CLIENTNAME "ranger2vib")
PROJECT (${CLIENTNAME})

message(STATUS "Configuring '${CLIENTNAME}'")

#########
# check DONNIE_PATH
#########
if(DEFINED ENV{DONNIE_PATH})
   SET(DONNIE_PATH "$ENV{DONNIE_PATH}")
   #message(STATUS "DONNIE_PATH = ${DONNIE_PATH}")
else()
   message(FATAL_ERROR "DONNIE_PATH is NOT defined")
endif()

INCLUDE (UsePlayerC++)

PLAYER_ADD_PLAYERCPP_CLIENT (${CLIENTNAME}
	SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${CLIENTNAME}.cpp ${CMAKE_CURRENT_SOURCE_DIR}/${CLIENTNAME}.cc 
	INCLUDEDIRS ${CMAKE_CURRENT_SOURCE_DIR} )

TARGET_LINK_LIBRARIES (${CLIENTNAME}) 
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR})

# Install executables with -x permission
INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${CLIENTNAME} DESTINATION ${DONNIE_PATH}/bin)
