CMAKE_MINIMUM_REQUIRED (VERSION 2.8 FATAL_ERROR)
SET (CLIENTNAME "vib_belt")
PROJECT (${CLIENTNAME})

message(STATUS "Configuring '${CLIENTNAME}'")

# Include this CMake module to get most of the settings needed to build
SET (CMAKE_MODULE_PATH "/usr/local/share/cmake/Modules")

INCLUDE (UsePlayerC++)

PLAYER_ADD_PLAYERCPP_CLIENT (${CLIENTNAME}
	SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/vib_belt.cpp ${CMAKE_CURRENT_SOURCE_DIR}/vib_belt.cc 
	INCLUDEDIRS ${CMAKE_CURRENT_SOURCE_DIR} )

TARGET_LINK_LIBRARIES (${CLIENTNAME}) 
INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR})

# Install executables with -x permission
INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/${CLIENTNAME} DESTINATION ${DONNIE_PATH}/bin)
#INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/test/* DESTINATION ${DONNIE_PATH}/test/${CLIENTNAME})
